[package]
name = "p2p-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.55", features = ["tokio", "tcp", "noise", "yamux", "mdns", "gossipsub", "identify", "macros", "request-response", "cbor"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
automerge = "0.5"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
arboard = "3.6.1"
